--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                     <h3>
                       <a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a>
                     </h3>
-                    <p>{{ post.published_at|date:"F j, Y" }}</p>
+                    <p>{{ post.published_at }}</p>
                   </div>
                 </div>
               </div>
@@ -102,7 +102,7 @@
                   </div>
                   <div class="details mt-20">
                     <h3>{{ post.title }}</h3>
-                    <p>{{ post.text }}</p>
+                    <p>{{ post.text|truncatechars:200 }}</p>
                     <a class="button" href="{% url 'post_detail' post.slug %}">Read More <i class="ti-arrow-right"></i></a>
                   </div>
                 </div>
