--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Contact Us{% endblock %}
+{% block title %}Sensive Blog - Contact{% endblock %}
 
 {% block content %}
 <section class="mb-30px">
